<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.recipe.RecipeDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/fragmentRecipeDetails_CV_recipeItemCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:id="@+id/list_item_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/recipeListItem_TXT_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="@font/open_sans_font"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/recipeListItem_IMG_recipeImage"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/image"
                        android:src="@drawable/ic_no_picture" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/fragmentRecipeDetails_TXT_cookingTimePreview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/open_sans_font"
                            android:text="@string/cooking_time_preview"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/fragmentRecipeDetails_TXT_cookingTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/open_sans_font"
                            android:text="@string/cooking_time"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/fragmentRecipeDetails_TXT_nutritionPreview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:fontFamily="@font/open_sans_font"
                            android:text="@string/nutrition_preview"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/fragmentRecipeDetails_TXT_nutritionSugarPreview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:fontFamily="@font/open_sans_font"
                                android:text="@string/sugar_preview"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                            <TextView
                                android:id="@+id/fragmentRecipeDetails_TXT_nutritionSugar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:fontFamily="@font/open_sans_font"
                                android:text="@string/nutrition_sugar"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                        </LinearLayout>



                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/fragmentRecipeDetails_TXT_carbohydratesPreview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:fontFamily="@font/open_sans_font"
                                android:text="@string/carbs_preview"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                            <TextView
                                android:id="@+id/fragmentRecipeDetails_TXT_carbohydrates"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:fontFamily="@font/open_sans_font"
                                android:text="@string/nutrition_carbohydrates"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/fragmentRecipeDetails_TXT_fiberPreview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:fontFamily="@font/open_sans_font"
                                android:text="@string/fiber_preview"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                            <TextView
                                android:id="@+id/fragmentRecipeDetails_TXT_fiber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:fontFamily="@font/open_sans_font"
                                android:text="@string/fiber"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/fragmentRecipeDetails_TXT_fatPreview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:fontFamily="@font/open_sans_font"
                                android:text="@string/fat_preview"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                            <TextView
                                android:id="@+id/fragmentRecipeDetails_TXT_fat"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:fontFamily="@font/open_sans_font"
                                android:text="@string/fat"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/fragmentRecipeDetails_TXT_proteinPreview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:fontFamily="@font/open_sans_font"
                                android:text="@string/protein_preview"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/fragmentRecipeDetails_TXT_protein"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:fontFamily="@font/open_sans_font"
                                android:text="@string/protein"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/fragmentRecipeDetails_TXT_caloriesPreview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:fontFamily="@font/open_sans_font"
                                android:text="@string/calories_preview"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                            <TextView
                                android:id="@+id/fragmentRecipeDetails_TXT_calories"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:fontFamily="@font/open_sans_font"
                                android:text="@string/calories"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                        </LinearLayout>



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/fragmentRecipeDetails_TXT_descriptionPreview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="@font/open_sans_font"
                            android:text="@string/description_fetched"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/fragmentRecipeDetails_TXT_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/open_sans_font"
                            android:text="@string/description"
                            android:textColor="@color/black"
                            android:textSize="20sp" />
                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
