<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.recipe_list.fragment.RecipeListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#EFECEC"
            android:orientation="vertical">


            <EditText
                android:id="@+id/fragmentRecipeList_EDT_searchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/field_bg"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/search"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragmentRecipeList_BTN_allFilter"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/filter_show_all"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragmentRecipeList_BTN_ascCookTimeFilter"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_font"
                    android:text="@string/filter_cook_time"
                    android:textSize="12sp"
                    app:icon="@drawable/ic_round_arrow_upward" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragmentRecipeList_BTN_descCookTimeFilter"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_font"
                    android:text="@string/filter_cook_time"
                    android:textSize="12sp"
                    app:icon="@drawable/ic_round_arrow_downward" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragmentRecipeList_BTN_titleFilter"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_font"
                    android:text="@string/filter_title"
                    android:textSize="12sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragmentRecipeList_RV_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <ProgressBar
                android:id="@+id/fragmentRecipeList_PB_progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="100dp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>

